control/.antlr/ControlParser.java
// Generated from c:/Users/Xorg123/go/src/OLC2_PROYECTO2_201908658/control/Control.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ControlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, ID=68, INT=69, DECIMAL=70, STRING=71, WS=72, LINEALCOMENT=73, 
		BlockComment=74;
	public static final int
		RULE_prog = 0, RULE_block = 1, RULE_sentencias = 2, RULE_insIf = 3, RULE_insSwitch = 4, 
		RULE_instCase = 5, RULE_instDefault = 6, RULE_instWhile = 7, RULE_instFor = 8, 
		RULE_instGuard = 9, RULE_instBreak = 10, RULE_instContinue = 11, RULE_instReturn = 12, 
		RULE_decVector = 13, RULE_funcsVectoriales = 14, RULE_decMatriz = 15, 
		RULE_tipoMatriz = 16, RULE_defMatrix = 17, RULE_listaValoresMat = 18, 
		RULE_listaValoresMat2 = 19, RULE_simpleMax = 20, RULE_instStruct = 21, 
		RULE_listaAtributos = 22, RULE_decStruct = 23, RULE_lDupla = 24, RULE_llamAtributos = 25, 
		RULE_llamadaMetodos = 26, RULE_decFunciones = 27, RULE_listaParametros = 28, 
		RULE_llamadaFuncion = 29, RULE_listaLlamadaParametros = 30, RULE_instPrint = 31, 
		RULE_instCasteos = 32, RULE_expresionList = 33, RULE_objectsList = 34, 
		RULE_declaracion = 35, RULE_asignacion = 36, RULE_expr = 37, RULE_tipovariable = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "block", "sentencias", "insIf", "insSwitch", "instCase", "instDefault", 
			"instWhile", "instFor", "instGuard", "instBreak", "instContinue", "instReturn", 
			"decVector", "funcsVectoriales", "decMatriz", "tipoMatriz", "defMatrix", 
			"listaValoresMat", "listaValoresMat2", "simpleMax", "instStruct", "listaAtributos", 
			"decStruct", "lDupla", "llamAtributos", "llamadaMetodos", "decFunciones", 
			"listaParametros", "llamadaFuncion", "listaLlamadaParametros", "instPrint", 
			"instCasteos", "expresionList", "objectsList", "declaracion", "asignacion", 
			"expr", "tipovariable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'{'", "'}'", "'else'", "'switch'", "'case'", "':'", "'default'", 
			"'while'", "'for'", "'in'", "'guard'", "'break'", "'continue'", "'return'", 
			"'var'", "'['", "']'", "'='", "'let'", "'.'", "'append'", "'('", "')'", 
			"'remove'", "'at'", "'removeLast'", "','", "'repeating'", "'count'", 
			"'struct'", "';'", "'mutating'", "'self'", "'func'", "'->'", "'_'", "'inout'", 
			"'&'", "'print'", "'?'", "'+='", "'-='", "'-'", "'!'", "'*'", "'/'", 
			"'+'", "'%'", "'>='", "'>'", "'<='", "'<'", "'=='", "'!='", "'&&'", "'||'", 
			"'true'", "'false'", "'nil'", "'isEmpty'", "'...'", "'String'", "'Float'", 
			"'Int'", "'Bool'", "'Character'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "ID", "INT", "DECIMAL", 
			"STRING", "WS", "LINEALCOMENT", "BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Control.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ControlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgInicialContext extends ProgContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ControlParser.EOF, 0); }
		public ProgInicialContext(ProgContext ctx) { copyFrom(ctx); }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			_localctx = new ProgInicialContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			block();
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlockContentContext extends BlockContext {
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public BlockContentContext(BlockContext ctx) { copyFrom(ctx); }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			_localctx = new BlockContentContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1153199896098L) != 0) || _la==ID) {
				{
				{
				setState(81);
				sentencias();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciasContext extends ParserRuleContext {
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
	 
		public SentenciasContext() { }
		public void copyFrom(SentenciasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaDeclaracionStructContext extends SentenciasContext {
		public DecStructContext decStruct() {
			return getRuleContext(DecStructContext.class,0);
		}
		public SentenciaDeclaracionStructContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaWhileContext extends SentenciasContext {
		public InstWhileContext instWhile() {
			return getRuleContext(InstWhileContext.class,0);
		}
		public SentenciaWhileContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaForContext extends SentenciasContext {
		public InstForContext instFor() {
			return getRuleContext(InstForContext.class,0);
		}
		public SentenciaForContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaPrintContext extends SentenciasContext {
		public InstPrintContext instPrint() {
			return getRuleContext(InstPrintContext.class,0);
		}
		public SentenciaPrintContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaSwitchContext extends SentenciasContext {
		public InsSwitchContext insSwitch() {
			return getRuleContext(InsSwitchContext.class,0);
		}
		public SentenciaSwitchContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaAsignacionContext extends SentenciasContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public SentenciaAsignacionContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaDeclaracionContext extends SentenciasContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public SentenciaDeclaracionContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaIfContext extends SentenciasContext {
		public InsIfContext insIf() {
			return getRuleContext(InsIfContext.class,0);
		}
		public SentenciaIfContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaLLamadaMetodosContext extends SentenciasContext {
		public LlamadaMetodosContext llamadaMetodos() {
			return getRuleContext(LlamadaMetodosContext.class,0);
		}
		public SentenciaLLamadaMetodosContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaDeclaracionMatrixContext extends SentenciasContext {
		public DecMatrizContext decMatriz() {
			return getRuleContext(DecMatrizContext.class,0);
		}
		public SentenciaDeclaracionMatrixContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaStructContext extends SentenciasContext {
		public InstStructContext instStruct() {
			return getRuleContext(InstStructContext.class,0);
		}
		public SentenciaStructContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaReturnContext extends SentenciasContext {
		public InstReturnContext instReturn() {
			return getRuleContext(InstReturnContext.class,0);
		}
		public SentenciaReturnContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaLLamadaFuncionContext extends SentenciasContext {
		public LlamadaFuncionContext llamadaFuncion() {
			return getRuleContext(LlamadaFuncionContext.class,0);
		}
		public SentenciaLLamadaFuncionContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaGuardContext extends SentenciasContext {
		public InstGuardContext instGuard() {
			return getRuleContext(InstGuardContext.class,0);
		}
		public SentenciaGuardContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaDeclaracionFuncionContext extends SentenciasContext {
		public DecFuncionesContext decFunciones() {
			return getRuleContext(DecFuncionesContext.class,0);
		}
		public SentenciaDeclaracionFuncionContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaBreakContext extends SentenciasContext {
		public InstBreakContext instBreak() {
			return getRuleContext(InstBreakContext.class,0);
		}
		public SentenciaBreakContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContinueContext extends SentenciasContext {
		public InstContinueContext instContinue() {
			return getRuleContext(InstContinueContext.class,0);
		}
		public SentenciaContinueContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaFuncVectorialesContext extends SentenciasContext {
		public FuncsVectorialesContext funcsVectoriales() {
			return getRuleContext(FuncsVectorialesContext.class,0);
		}
		public SentenciaFuncVectorialesContext(SentenciasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaDeclaracionVectorContext extends SentenciasContext {
		public DecVectorContext decVector() {
			return getRuleContext(DecVectorContext.class,0);
		}
		public SentenciaDeclaracionVectorContext(SentenciasContext ctx) { copyFrom(ctx); }
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentencias);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new SentenciaDeclaracionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				declaracion();
				}
				break;
			case 2:
				_localctx = new SentenciaDeclaracionVectorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				decVector();
				}
				break;
			case 3:
				_localctx = new SentenciaDeclaracionMatrixContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				decMatriz();
				}
				break;
			case 4:
				_localctx = new SentenciaDeclaracionFuncionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				decFunciones();
				}
				break;
			case 5:
				_localctx = new SentenciaAsignacionContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				asignacion();
				}
				break;
			case 6:
				_localctx = new SentenciaIfContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				insIf();
				}
				break;
			case 7:
				_localctx = new SentenciaSwitchContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				insSwitch();
				}
				break;
			case 8:
				_localctx = new SentenciaWhileContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(94);
				instWhile();
				}
				break;
			case 9:
				_localctx = new SentenciaForContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(95);
				instFor();
				}
				break;
			case 10:
				_localctx = new SentenciaGuardContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(96);
				instGuard();
				}
				break;
			case 11:
				_localctx = new SentenciaBreakContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(97);
				instBreak();
				}
				break;
			case 12:
				_localctx = new SentenciaContinueContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(98);
				instContinue();
				}
				break;
			case 13:
				_localctx = new SentenciaReturnContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(99);
				instReturn();
				}
				break;
			case 14:
				_localctx = new SentenciaFuncVectorialesContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(100);
				funcsVectoriales();
				}
				break;
			case 15:
				_localctx = new SentenciaLLamadaFuncionContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(101);
				llamadaFuncion();
				}
				break;
			case 16:
				_localctx = new SentenciaPrintContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(102);
				instPrint();
				}
				break;
			case 17:
				_localctx = new SentenciaStructContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(103);
				instStruct();
				}
				break;
			case 18:
				_localctx = new SentenciaDeclaracionStructContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(104);
				decStruct();
				}
				break;
			case 19:
				_localctx = new SentenciaLLamadaMetodosContext(_localctx);
				enterOuterAlt(_localctx, 19);
				{
				setState(105);
				llamadaMetodos();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsIfContext extends ParserRuleContext {
		public InsIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insIf; }
	 
		public InsIfContext() { }
		public void copyFrom(InsIfContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionIfContext extends InsIfContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public InsIfContext insIf() {
			return getRuleContext(InsIfContext.class,0);
		}
		public InstruccionIfContext(InsIfContext ctx) { copyFrom(ctx); }
	}

	public final InsIfContext insIf() throws RecognitionException {
		InsIfContext _localctx = new InsIfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_insIf);
		int _la;
		try {
			_localctx = new InstruccionIfContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__0);
			setState(109);
			expr(0);
			setState(110);
			match(T__1);
			setState(111);
			block();
			setState(112);
			match(T__2);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(113);
				match(T__3);
				setState(119);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(114);
					insIf();
					}
					break;
				case T__1:
					{
					setState(115);
					match(T__1);
					setState(116);
					block();
					setState(117);
					match(T__2);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsSwitchContext extends ParserRuleContext {
		public InsSwitchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insSwitch; }
	 
		public InsSwitchContext() { }
		public void copyFrom(InsSwitchContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionSwitchContext extends InsSwitchContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<InstCaseContext> instCase() {
			return getRuleContexts(InstCaseContext.class);
		}
		public InstCaseContext instCase(int i) {
			return getRuleContext(InstCaseContext.class,i);
		}
		public InstDefaultContext instDefault() {
			return getRuleContext(InstDefaultContext.class,0);
		}
		public InstruccionSwitchContext(InsSwitchContext ctx) { copyFrom(ctx); }
	}

	public final InsSwitchContext insSwitch() throws RecognitionException {
		InsSwitchContext _localctx = new InsSwitchContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_insSwitch);
		int _la;
		try {
			_localctx = new InstruccionSwitchContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__4);
			setState(124);
			expr(0);
			setState(125);
			match(T__1);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(126);
				instCase();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(132);
				instDefault();
				}
			}

			setState(135);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstCaseContext extends ParserRuleContext {
		public InstCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instCase; }
	 
		public InstCaseContext() { }
		public void copyFrom(InstCaseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionCaseContext extends InstCaseContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public InstruccionCaseContext(InstCaseContext ctx) { copyFrom(ctx); }
	}

	public final InstCaseContext instCase() throws RecognitionException {
		InstCaseContext _localctx = new InstCaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instCase);
		try {
			_localctx = new InstruccionCaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__5);
			setState(138);
			expr(0);
			setState(139);
			match(T__6);
			setState(140);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstDefaultContext extends ParserRuleContext {
